--- a/portfolio/src/styles/variables.css
+++ b/portfolio/src/styles/variables.css
@@ -5,5 +5,6 @@
     --font-size-small: 1rem;
     --padding-large: 1rem;
     --padding-small: 0.5rem;
+    --font-family-primary: 'Jacques Francois', serif;
   }
   
