--- a/portfolio/src/styles/variables.css
+++ b/portfolio/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
     --brown-color: #302525;
-    --pink-color: #B1869B;
+    --pink-color: #F0EAD6;
     --font-size-large: 1.5rem;
     --font-size-small: 1rem;
     --padding-large: 1rem;
